更改划词SA代码仓
Signed-off-by: Sunjiamei <sunjiamei001@chinasoftinc.com>

--- a/sa_profile/BUILD.gn
+++ b/sa_profile/BUILD.gn
@@ -17,5 +17,5 @@ import("../word_selection.gni")
 ohos_sa_profile("word_selection_sa_profile") {
   sources = [ "8567.json" ]
 
-  part_name = "word_selection"
+  part_name = "selectionfwk"
 }
