--- a/etc/init/BUILD.gn
+++ b/etc/init/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (C) 2024 Huawei Device Co., Ltd.
+# Copyright (C) 2025 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -16,6 +16,6 @@ import("//build/ohos.gni")
 ohos_prebuilt_etc("word_selection_cfg") {
   source = "word_selection.cfg"
   relative_install_dir = "init"
-  part_name = "word_selection"
-  subsystem_name = "word_selection_system"
+  part_name = "selectionfwk"
+  subsystem_name = "systemabilitymgr"
 }
