--- a/service/BUILD.gn
+++ b/service/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2025 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -43,6 +43,6 @@ ohos_shared_library("word_selection_base") {
     "input:libmmi-client",
   ]
 
-  part_name = "word_selection"
-  subsystem_name = "word_selection_system"
+  part_name = "selectionfwk"
+  subsystem_name = "systemabilitymgr"
 }
