--- a/etc/init/selection_service.cfg
+++ b/etc/init/selection_service.cfg
@@ -1,15 +1,18 @@
 {
     "services" : [{
-            "name" : "word_selection",
-            "path" : ["/system/bin/sa_main", "/system/profile/word_selection.json"],
+            "name" : "selection_service",
+            "path" : ["/system/bin/sa_main", "/system/profile/selection_service.json"],
             "ondemand": true,
             "importance" : -20,
             "once" : 0,
             "uid" : "system",
             "gid" : ["system", "shell"],
+            "apl": "system_basic",
             "permission" : [
                 "ohos.permission.INPUT_MONITORING"
             ],
+            "permission_acls" : ["ohos.permission.INPUT_MONITORING"],
+            "caps" : [],
             "secon" : "u:r:powermgr:s0"
         }
     ]
