--- a/etc/init/selection_service.cfg
+++ b/etc/init/selection_service.cfg
@@ -5,15 +5,15 @@
             "ondemand": true,
             "importance" : -20,
             "once" : 0,
-            "uid" : "system",
-            "gid" : ["system", "shell"],
+            "uid" : "sysselection",
+            "gid" : ["sysselection", "shell"],
             "apl": "system_basic",
             "permission" : [
                 "ohos.permission.INPUT_MONITORING"
             ],
             "permission_acls" : ["ohos.permission.INPUT_MONITORING"],
             "caps" : [],
-            "secon" : "u:r:powermgr:s0"
+            "secon" : "u:r:selection_service:s0"
         }
     ]
 }
