--- a/service/BUILD.gn
+++ b/service/BUILD.gn
@@ -46,6 +46,8 @@ ohos_shared_library("selection_service") {
   deps = [ ":selection_service_interface" ]
 
   external_deps = [
+    "ability_base:want",
+    "ability_runtime:ability_manager",
     "c_utils:utils",
     "ipc:ipc_single",
     "init:libbeget_proxy",
