--- a/etc/init/selection_service.cfg
+++ b/etc/init/selection_service.cfg
@@ -9,7 +9,10 @@
             "gid" : ["sysselection", "shell"],
             "apl": "system_basic",
             "permission" : [
-                "ohos.permission.INPUT_MONITORING"
+                "ohos.permission.INPUT_MONITORING",
+                "ohos.permission.GET_RUNNING_INFO",
+                "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
+                "ohos.permission.REPORT_RESOURCE_SCHEDULE_EVENT"
             ],
             "permission_acls" : ["ohos.permission.INPUT_MONITORING"],
             "caps" : [],
