--- a/selection_service.gni
+++ b/selection_service.gni
@@ -25,17 +25,6 @@ ability_runtime_inner_api_path = "${ability_runtime_path}/interfaces/inner_api"
 ability_runtime_services_path = "${ability_runtime_path}/services"
 word_selection_part_name = "word_selection"
 
-word_selection_root_path = "//base/word_selection"
-
-word_selection_service_path = "${word_selection_root_path}/services"
-
-word_selection_service_zidl = "${word_selection_service_path}/zidl"
-
-word_selection_framework = "${word_selection_root_path}/frameworks"
-word_selection_framework_native = "${word_selection_framework}/native"
-
-word_selection_inner_api = "${word_selection_root_path}/interfaces/inner_api"
-
-word_selection_utils_path = "${word_selection_root_path}/utils"
+selection_fwk_root_path = "//foundation/systemabilitymgr/selection_fwk"
 
 system_type = "default"
