--- a/frameworks/js/napi/selection_extension_ability/BUILD.gn
+++ b/frameworks/js/napi/selection_extension_ability/BUILD.gn
@@ -44,7 +44,7 @@ ohos_shared_library("selectionextensionability_napi") {
 
   external_deps = [ "napi:ace_napi" ]
 
-  relative_install_dir = "module/app/ability"
+  relative_install_dir = "module"
   subsystem_name = "systemabilitymgr"
   part_name = "selectionfwk"
 }
