增加On接口调用
Signed-off-by: fanzhe <fanzhe001@chinasoftinc.com>
Signed-off-by: Sunjiamei <sunjiamei001@chinasoftinc.com>

--- a/frameworks/js/napi/selection_ability/BUILD.gn
+++ b/frameworks/js/napi/selection_ability/BUILD.gn
@@ -37,6 +37,9 @@ ohos_shared_library("selectionengine_napi") {
 
   deps = [
     "${selection_fwk_root_path}/common:selection_common",
+    "${selection_fwk_root_path}/service:selection_service_proxy",
+    "${selection_fwk_root_path}/frameworks/native/selection_ability:selection_listener_proxy",
+    "${selection_fwk_root_path}/frameworks/native/selection_ability:selection_ability",
   ]
 
   external_deps = [
