--- a/etc/init/selection_service.cfg
+++ b/etc/init/selection_service.cfg
@@ -12,7 +12,8 @@
                 "ohos.permission.INPUT_MONITORING",
                 "ohos.permission.GET_RUNNING_INFO",
                 "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
-                "ohos.permission.REPORT_RESOURCE_SCHEDULE_EVENT"
+                "ohos.permission.REPORT_RESOURCE_SCHEDULE_EVENT",
+                "ohos.permission.SYSTEM_FLOAT_WINDOW"
             ],
             "permission_acls" : ["ohos.permission.INPUT_MONITORING"],
             "caps" : [],
