--- a/etc/init/selection_service.cfg
+++ b/etc/init/selection_service.cfg
@@ -10,12 +10,15 @@
             "apl": "system_basic",
             "permission" : [
                 "ohos.permission.INPUT_MONITORING",
+                "ohos.permission.INJECT_INPUT_EVENT",
                 "ohos.permission.GET_RUNNING_INFO",
                 "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
                 "ohos.permission.REPORT_RESOURCE_SCHEDULE_EVENT",
                 "ohos.permission.SYSTEM_FLOAT_WINDOW"
             ],
-            "permission_acls" : ["ohos.permission.INPUT_MONITORING"],
+            "permission_acls" : [
+                "ohos.permission.INPUT_MONITORING"
+            ],
             "caps" : [],
             "secon" : "u:r:selection_service:s0"
         }
