--- a/service/BUILD.gn
+++ b/service/BUILD.gn
@@ -78,12 +78,13 @@ ohos_shared_library("selection_service") {
     "ability_runtime:ability_manager",
     "c_utils:utils",
     "napi:ace_napi",
+    "hilog:libhilog",
     "ipc:ipc_single",
     "init:libbeget_proxy",
-    "hilog:libhilog",
+    "input:libmmi-client",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
-    "input:libmmi-client",
+    "screenlock_mgr:screenlock_client",
   ]
 
   part_name = "selectionfwk"
