整改选词部分代码结构
Signed-off-by: yangmaoquan <yangmaoquan@chinasoftinc.com>
Signed-off-by: Sunjiamei <sunjiamei001@chinasoftinc.com>

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -28,6 +28,7 @@ ohos_unittest("selection_service_unit_test") {
   ]
   deps = [
     "${selection_fwk_root_path}/service:selection_service",
+    "${selection_fwk_root_path}/common:selection_common",
   ]
   external_deps = [
     "ability_base:want",
