修复注册失焦监听导致的服务重启问题
Signed-off-by: fanzhe <fanzhe001@chinasoftinc.com>
Signed-off-by: Sunjiamei <sunjiamei001@chinasoftinc.com>

--- a/common/BUILD.gn
+++ b/common/BUILD.gn
@@ -31,6 +31,7 @@ ohos_static_library("selection_common") {
   sanitize = {
     cfi = true
     cfi_cross_dso = true
+    cfi_vcall_icall_only = true
     debug = false
   }
   sources = [
