--- a/frameworks/js/napi/selection_ability/BUILD.gn
+++ b/frameworks/js/napi/selection_ability/BUILD.gn
@@ -20,6 +20,7 @@ ohos_shared_library("selectionengine_napi") {
     boundary_sanitize = true
     cfi = true
     cfi_cross_dso = true
+    cfi_vcall_icall_only = true
     debug = false
     integer_overflow = true
     ubsan = true
