--- a/frameworks/native/selection_ability/BUILD.gn
+++ b/frameworks/native/selection_ability/BUILD.gn
@@ -64,6 +64,7 @@ ohos_shared_library("selection_ability") {
     boundary_sanitize = true
     cfi = true
     cfi_cross_dso = true
+    cfi_vcall_icall_only = true
     debug = false
     integer_overflow = true
     ubsan = true
