--- a/service/BUILD.gn
+++ b/service/BUILD.gn
@@ -38,6 +38,7 @@ ohos_source_set("selection_service_proxy") {
   sanitize = {
     cfi = true
     cfi_cross_dso = true
+    cfi_vcall_icall_only = true
     debug = false
   }
   include_dirs = [
@@ -58,6 +59,21 @@ ohos_source_set("selection_service_proxy") {
 }
 
 ohos_shared_library("selection_service") {
+  branch_protector_ret = "pac_ret"
+  sanitize = {
+    boundary_sanitize = true
+    cfi = true
+    cfi_cross_dso = true
+    cfi_vcall_icall_only = true
+    debug = false
+    integer_overflow = true
+    ubsan = true
+  }
+  cflags_cc = [
+    "-fdata-sections",
+    "-ffunction-sections",
+    "-Oz",
+  ]
   configs = [ ":selection_sa_config", ]
   output_values = get_target_outputs(":selection_service_interface")
 
