--- a/frameworks/js/napi/selection_ability/BUILD.gn
+++ b/frameworks/js/napi/selection_ability/BUILD.gn
@@ -12,7 +12,7 @@
 # limitations under the License.
 
 import("//build/ohos.gni")
-import("//foundation/systemabilitymgr/selection_fwk/selection_service.gni")
+import("//foundation/systemabilitymgr/selectionfwk/selection_service.gni")
 
 ohos_shared_library("selectionengine_napi") {
   branch_protector_ret = "pac_ret"
@@ -71,6 +71,7 @@ ohos_shared_library("selectionengine_napi") {
     "graphic_2d:librender_service_base",
     "graphic_2d:librender_service_client",
     "graphic_2d:window_animation",
+    "samgr:samgr_proxy",
   ]
 
   relative_install_dir = "module"
