--- a/etc/init/selection_service.cfg
+++ b/etc/init/selection_service.cfg
@@ -13,7 +13,9 @@
                 "ohos.permission.INJECT_INPUT_EVENT",
                 "ohos.permission.GET_RUNNING_INFO",
                 "ohos.permission.GET_BUNDLE_INFO_PRIVILEGED",
+                "ohos.permission.READ_PASTEBOARD",
                 "ohos.permission.REPORT_RESOURCE_SCHEDULE_EVENT",
+                "ohos.permission.CONNECT_SELECTION_EXTENSION",
                 "ohos.permission.SYSTEM_FLOAT_WINDOW"
             ],
             "jobs" : {
