--- a/frameworks/js/napi/selection_ability/BUILD.gn
+++ b/frameworks/js/napi/selection_ability/BUILD.gn
@@ -45,8 +45,8 @@ ohos_shared_library("selectionmanager_napi") {
 
   deps = [
     "${selection_fwk_root_path}/common:selection_common",
-    "${selection_fwk_root_path}/service:selection_service_proxy",
-    "${selection_fwk_root_path}/frameworks/native/selection_ability:selection_listener_proxy",
+    "${selection_fwk_root_path}/interfaces/idl:selection_service_proxy",
+    "${selection_fwk_root_path}/interfaces/idl:selection_listener_proxy",
     "${selection_fwk_root_path}/frameworks/native/selection_ability:selection_ability",
   ]
 
