--- a/etc/init/selection_service.cfg
+++ b/etc/init/selection_service.cfg
@@ -16,7 +16,8 @@
                 "ohos.permission.READ_PASTEBOARD",
                 "ohos.permission.REPORT_RESOURCE_SCHEDULE_EVENT",
                 "ohos.permission.CONNECT_SELECTION_EXTENSION",
-                "ohos.permission.SYSTEM_FLOAT_WINDOW"
+                "ohos.permission.SYSTEM_FLOAT_WINDOW",
+                "ohos.permission.MANAGE_LOCAL_ACCOUNTS"
             ],
             "jobs" : {
                 "on-start" : "services:selection_service"
