--- a/service/BUILD.gn
+++ b/service/BUILD.gn
@@ -57,6 +57,7 @@ ohos_shared_library("selection_service") {
     "src/sys_selection_config_repository.cpp",
     "src/selection_config_comparator.cpp",
     "src/selection_common.cpp",
+    "src/system_ability_status_change_listener.cpp",
   ]
   deps = [
     "${selection_fwk_root_path}/interfaces/idl:selection_service_interface",
@@ -69,7 +70,10 @@ ohos_shared_library("selection_service") {
     "ability_base:want",
     "ability_runtime:ability_manager",
     "access_token:libaccesstoken_sdk",
+    "access_token:libtokenid_sdk",
     "c_utils:utils",
+    "common_event_service:cesfwk_core",
+    "common_event_service:cesfwk_innerkits",
     "napi:ace_napi",
     "hilog:libhilog",
     "ipc:ipc_single",
