Description:实现扩展按需启停，删除部分js测试代码 Binary Source:No Signed-off-by: songjiawei9 <songjiawei9@h-partners.com>

--- a/frameworks/native/selection_extension/BUILD.gn
+++ b/frameworks/native/selection_extension/BUILD.gn
@@ -64,6 +64,7 @@ ohos_shared_library("selection_extension_ability_native") {
     "ipc:ipc_napi",
     "napi:ace_napi",
     "hilog:libhilog",
+    "window_manager:libwm",
   ]
 
   relative_install_dir = "extensionability/"
