--- a/selection_service.gni
+++ b/selection_service.gni
@@ -15,6 +15,7 @@ import("//build/ohos.gni")
 
 declare_args() {
   word_selection_feature_test_one = true
+  selectionfwk_support_pass_windowId = false
 }
 
 
