--- a/frameworks/native/selection_ability/BUILD.gn
+++ b/frameworks/native/selection_ability/BUILD.gn
@@ -47,6 +47,10 @@ ohos_shared_library("selection_ability") {
   ]
   configs = [ ":selection_listener_config", ]
 
+  include_dirs = [
+    "${selection_fwk_root_path}/interfaces/inner_kits/selection_client/include",
+  ]
+
   sources = [
     "src/selection_ability.cpp",
     "src/selection_listener_impl.cpp",
@@ -55,11 +59,13 @@ ohos_shared_library("selection_ability") {
     "src/selection_system_ability_utils.cpp",
     "${selection_fwk_root_path}/hiappevent_agent/selection_api_event_reporter.cpp",
     "${selection_fwk_root_path}/sysevent/hisysevent_adapter.cpp",
+    "${selection_fwk_root_path}/utils/src/selection_timer.cpp",
   ]
   deps = [
     "${selection_fwk_root_path}/common:selection_common",
     "${selection_fwk_root_path}/interfaces/idl:selection_listener_interface",
     "${selection_fwk_root_path}/interfaces/idl:selection_listener_stub",
+    "${selection_fwk_root_path}/interfaces/inner_kits/selection_client:selection_client",
   ]
 
   external_deps = [
@@ -87,6 +93,10 @@ ohos_shared_library("selection_ability") {
     "hitrace:libhitracechain",
     "hisysevent:libhisysevent",
   ]
+
+  if (selectionfwk_support_pass_windowId) {
+    define += [ "SELECTIONFWK_SUPPORT_PASS_WINDOWID" ]
+  }
 
   public_external_deps = [ "window_manager:libwm" ]
 
